# expert

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  attention_fabric_spec_v2.md  docker-compose.yml
.githooks/: pre-commit
.github/workflows/: ci.yml
cli/: README.md  pyproject.toml
cli/expert_cli/: main.py
crates/expert-config/: Cargo.toml
crates/expert-config/src/: lib.rs
crates/expert-redis/: Cargo.toml  README.md
crates/expert-redis/src/: lib.rs  names.rs  service_log.rs  state.rs  streams.rs
crates/expert-ssm/: Cargo.toml  README.md
crates/expert-ssm/src/: checkpoint.rs  lib.rs  ssm.rs  threshold.rs
crates/expert-tests/: Cargo.toml
crates/expert-tests/src/: lib.rs
crates/expert-tests/tests/: checkpoint_lifecycle.rs  discord_adapter.rs  event_pipeline.rs  orchestrator_api.rs  postgres_integration.rs  qdrant_integration.rs  redis_state.rs  redis_streams.rs  session_summarization.rs
crates/expert-types/: Cargo.toml  README.md
crates/expert-types/src/: activity.rs  context.rs  event.rs  event_filter.rs  goal.rs  lib.rs  service_log.rs  signals.rs  training.rs
crates/expert-vectors/: Cargo.toml
crates/expert-vectors/src/: lib.rs
docs/: architecture.md
docs/decisions/: encoder-selection.md  rag-db-selection.md  response-coordination.md  ssm-architecture.md  training-approach.md
docs/designs/: event-filters.md
services/context-builder/: Cargo.toml  DESIGN.md  README.md
services/context-builder/src/: main.rs
services/discord-adapter/: Cargo.toml  README.md
services/discord-adapter/src/: actions.rs  auth.rs  events.rs  gateway.rs  main.rs  rest.rs  tools.rs
services/encoder/: Cargo.toml  DESIGN.md  README.md
services/encoder/src/: main.rs
services/llm-gateway/: Cargo.toml  DESIGN.md  README.md
services/llm-gateway/src/: llamacpp.rs  main.rs  ollama.rs  tools.rs
services/orchestrator/: Cargo.toml  DESIGN.md  README.md
services/orchestrator/src/: api.rs  event_log.rs  main.rs  metrics.rs  panel.html  panel.rs  registry.rs  workers.rs
services/rag-service/: Cargo.toml  DESIGN.md  README.md
services/rag-service/src/: main.rs  qdrant_store.rs
services/ssm-worker/: Cargo.toml  DESIGN.md  README.md
services/ssm-worker/src/: activity.rs  features.rs  main.rs  ssm.rs
services/stream-ingestion/: Cargo.toml  DESIGN.md  README.md
services/stream-ingestion/src/: main.rs
services/training-service/: Cargo.toml  DESIGN.md  README.md
services/training-service/src/: batch.rs  consensus.rs  main.rs  train.rs
tools/training-import/: Cargo.toml
tools/training-import/src/: main.rs
