[package]
name = "expert-tests"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
expert-types = { workspace = true }
expert-redis = { workspace = true }
expert-config = { workspace = true }
expert-vectors = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
redis = { workspace = true }
reqwest = { workspace = true }
axum = { workspace = true }
sqlx = { workspace = true }
qdrant-client = "1"
anyhow = { workspace = true }
