[package]
name = "discord-adapter"
version.workspace = true
edition.workspace = true

[dependencies]
expert-types = { workspace = true }
expert-redis = { workspace = true }
expert-config = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
redis = { workspace = true }
anyhow = { workspace = true }
