[package]
name = "llm-gateway"
version.workspace = true
edition.workspace = true

[dependencies]
expert-types = { workspace = true }
expert-redis = { workspace = true }
expert-config = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
redis = { workspace = true }
async-trait = "0.1"
