[package]
name = "orchestrator"
version.workspace = true
edition.workspace = true

[dependencies]
expert-types = { workspace = true }
expert-redis = { workspace = true }
expert-config = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
axum = { workspace = true }
anyhow = { workspace = true }
tower-http = { workspace = true }
qdrant-client = { workspace = true }
tokio-stream = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
