[package]
name = "training-import"
version.workspace = true
edition.workspace = true

[[bin]]
name = "training-import"
path = "src/main.rs"

[dependencies]
expert-types = { path = "../../crates/expert-types" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
csv = "1"
clap = { version = "4", features = ["derive", "env"] }
